--- a/package.json
+++ b/package.json
@@ -156,5 +156,10 @@
         }
       ]
     ]
+  },
+  "codegenConfig": {
+    "name": "RNCalculatorSpec",
+    "type": "modules",
+    "jsSrcsDir": "src"
   }
 }
